# fintech-ai-segmentation

./: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.override.yml  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
docs/: data-generation-summary.md  deployment-guide.md  design_prototype_dashboard.html  design_prototype_report.html  fintech-ai-segmentation-summary.md  notebooks-roadmap.md  project-journey.md  project-structure.md  ultimate-setup-guide.md
docs/security/: pentest-2026-06-09.md
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/public/: theme-init.js
frontend/src/: App.tsx  index.css
notebooks/: 0.Data_Generation.ipynb  1.EDA.ipynb  1.EDA_demographic_analysis.ipynb  2.EDA_cohort_analysis.ipynb  2.Transactions_EDA_monthly_aggregates.ipynb  3.EDA_RFM_Clustering.ipynb  EDA.ipynb  EDA_Validation_Fake_Dataset.ipynb
notebooks/snapshots/: 1.EDA_snapshot_2026-03-23.html  1.EDA_snapshot_2026-03-23.ipynb
scripts/: data_loader.py  load_raw_tables.sh  modify_notebook2.py
src/fintech_ai_segmentation/: __init__.py  base_tables.py  cohort_aggregates.py  faker_base_generation.py  rfm_features.py
supabase/: base_schema.sql  customer_analysis_schema.sql  customers_analytics_view.sql  phase1_app_layer.sql
tests/integration/: test_data_loader_integration.py
tests/unit/: test_analyze_endpoint.py  test_app.py  test_client_ip.py  test_cohort_aggregates.py  test_customer_repository.py  test_customers_endpoint.py  (+8 more)
(+57 files in other folders)
